--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "grunt-contrib-watch": "~0.3.1",
     "grunt-noflo-manifest": "^0.1.10",
     "grunt-noflo-browser": "^0.1.1",
-    "grunt-bower-task": "^0.3.4"
+    "grunt-bower-task": "^0.3.4",
+    "sinon": "^1.10.3"
   },
   "scripts": {
     "test": "grunt test"
