Added "Moritz Krog" as contributor.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
     "email": "henri.bergius@iki.fi",
     "url": "http://bergie.iki.fi"
   },
+  "contributors": [
+    {
+      "name": "Moritz Krog",
+      "email": "moritzkrog@gmail.com",
+      "url": "https://github.com/JohnRandom"
+    }
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/noflo/noflo-amd.git"
